@@ -106,6 +106,7 @@ admin.title.virtualwiki=Add Virtual Wiki
 admin.usergrouptype.database=Database
 admin.usergrouptype.ldap=LDAP
 allcategories.title=Categories
+allimages.title=All Files
 alltopics.title=All Topics
 common.add=Add
 common.back=Back
