@@ -106,6 +106,7 @@ admin.title.virtualwiki=Tilf\u00F8j virtuel wiki
 admin.usergrouptype.database=Database
 admin.usergrouptype.ldap=LDAP
 allcategories.title=Kategorier
+allimages.title=All Files
 alltopics.title=Alle emner
 common.add=Tilf\u00F8j
 common.back=Tilbage
