@@ -106,6 +106,7 @@ admin.title.virtualwiki=Virtuelles Wiki hinzuf\u00FCgen
 admin.usergrouptype.database=Datenbank
 admin.usergrouptype.ldap=LDAP
 allcategories.title=Kategorien
+allimages.title=All Files
 alltopics.title=Alle Artikel
 common.add=Hinzuf\u00FCgen
 common.back=Zur\u00FCck
