@@ -106,6 +106,7 @@ admin.title.virtualwiki=A\u00F1adir wiki virtual
 admin.usergrouptype.database=base de datos
 admin.usergrouptype.ldap=LDAP
 allcategories.title=Categories
+allimages.title=All Files
 alltopics.title=All Topics
 common.add=A\u00F1adir
 common.back=Volver
