@@ -106,6 +106,7 @@ admin.title.virtualwiki=Ajouter une wiki virtuelle
 admin.usergrouptype.database=Database
 admin.usergrouptype.ldap=LDAP
 allcategories.title=Categories
+allimages.title=All Files
 alltopics.title=All Topics
 common.add=Ajouter
 common.back=Retour
