@@ -106,6 +106,7 @@ admin.title.virtualwiki=Aggiungi un wiki virtuale
 admin.usergrouptype.database=Database
 admin.usergrouptype.ldap=LDAP
 allcategories.title=Categories
+allimages.title=All Files
 alltopics.title=All Topics
 common.add=Aggiungi
 common.back=Indietro
