@@ -106,6 +106,7 @@ admin.title.virtualwiki=Virtual Wiki toevoegen
 admin.usergrouptype.database=Database
 admin.usergrouptype.ldap=LDAP
 allcategories.title=Categories
+allimages.title=All Files
 alltopics.title=All Topics
 common.add=Voeg toe
 common.back=Terug
