@@ -106,6 +106,7 @@ admin.title.virtualwiki=Legg til virtuell Wiki
 admin.usergrouptype.database=Database
 admin.usergrouptype.ldap=LDAP
 allcategories.title=Categories
+allimages.title=All Files
 alltopics.title=All Topics
 common.add=Legg til
 common.back=Tilbake
