@@ -106,6 +106,7 @@ admin.title.virtualwiki=L\u00E4gg till virtuell Wiki
 admin.usergrouptype.database=databas
 admin.usergrouptype.ldap=LDAP
 allcategories.title=Categories
+allimages.title=All Files
 alltopics.title=All Topics
 common.add=L\u00E4gg till
 common.back=Tillbaka
