@@ -106,6 +106,7 @@ admin.title.virtualwiki=\u6DFB\u52A0\u865A\u62DF\u7EF4\u57FA
 admin.usergrouptype.database=\u6570\u636E\u5E93
 admin.usergrouptype.ldap=\u8F7B\u91CF\u76EE\u5F55\u8BBF\u95EE\u534F\u8BAE
 allcategories.title=\u5206\u7C7B
+allimages.title=All Files
 alltopics.title=\u6240\u6709\u4E3B\u9898
 common.add=\u6DFB\u52A0
 common.back=\u540E\u9000
