@@ -106,6 +106,7 @@ admin.title.virtualwiki=\u6DFB\u52A0\u865B\u64EC Wiki
 admin.usergrouptype.database=\u6578\u64DA\u5EAB
 admin.usergrouptype.ldap=LDAP
 allcategories.title=\u5206\u985E
+allimages.title=All Files
 alltopics.title=\u6240\u6709\u4E3B\u984C
 common.add=\u6DFB\u52A0
 common.back=\u5F8C\u9000
