@@ -219,6 +219,9 @@
 		<name>Special:History</name>
 	</pseudotopic>
 	<pseudotopic>
+		<name>Special:Imagelist</name>
+	</pseudotopic>
+	<pseudotopic>
 		<name>Special:Import</name>
 	</pseudotopic>
 	<pseudotopic>
