@@ -4,6 +4,7 @@
 * [[Special:TopicsAdmin|Csak adminisztrátorok számára elérhetõ lapok]]
 * [[Special:Allpages|Minden oldal]]
 * [[Special:Categories|Kategóriák]]
+* [[Special:Imagelist|All files]]
 * [[Special:RecentChanges|Friss változások]]
 * [[Special:Search|Keresés]]
 * [[Special:Upload|Feltöltés]]
